Fix event venue z-index

--- a/storkre-child/sass/partials/common/_event-detail.sass
+++ b/storkre-child/sass/partials/common/_event-detail.sass
@@ -9,6 +9,10 @@ main
       @extend %clearfix
       margin-bottom: 1em
 
+  .eo-event-venue-map
+    .eo-venue-map
+      z-index: 0
+
   .eo-event-meta
     margin-bottom: 1em
     font-size: 14px
